--- a/index.css
+++ b/index.css
@@ -1,19 +1,54 @@
-body{
-    background-color:cornsilk;
+body {
+    background-color: cornsilk;
 }
 
-h1{
+h1 {
     text-align: center;
+    font-size: 50px;
 }
 
-table {
-    width: 100%;
-    height: 200px;
+.logo {
+height: 25%;
+width: 25%;
+margin-left: auto;
+margin-right: auto;
+}
+
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    
+  }
+
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .row {
+    display: flex;
+  }
+
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
+
+.about {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    font-size: 40px;
 }
 
-th{
-    width: 33%;
-    font-size: 50px;
+.AboutInfo {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 20px;
 }
