--- a/index.css
+++ b/index.css
@@ -1,43 +1,27 @@
 body {
-    background-color: cornsilk;
+    background-color: rgb(255, 255, 255);
 }
 
-h1 {
+.logotext {
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     font-size: 50px;
+
 }
 
 .logo {
-height: 25%;
-width: 25%;
-margin-left: auto;
-margin-right: auto;
+    background-image: url("Ice-logo.jpg");
+    width: 50%;
+    
+    padding: 5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
-/* Three image containers (use 25% for four, and 50% for two, etc) */
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-    
-  }
 
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-
-  .row {
-    display: flex;
-  }
-
-  .column {
-    flex: 33.33%;
-    padding: 5px;
-  }
 
 .about {
     margin-left: auto;
@@ -52,3 +36,59 @@ margin-right: auto;
     text-align: center;
     font-size: 20px;
 }
+
+html {
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
