--- a/index.css
+++ b/index.css
@@ -20,14 +20,12 @@ body {
     margin-right: auto;
 }
 
-
-
-
 .about {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-size: 40px;
+   
 }
 
 .AboutInfo {
@@ -35,7 +33,10 @@ body {
     margin-right: auto;
     text-align: center;
     font-size: 20px;
+    padding:4%;
 }
+
+
 
 html {
     box-sizing: border-box;
