--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(255, 255, 255);
+    margin:0;
 }
 
 .logotext {
@@ -11,12 +12,13 @@ body {
 }
 
 .logo {
-    background-image: url("Image/Ice-logo.jpg");
-    width: 50%;
-    padding: 5%;
-    display: block;
+    background: linear-gradient(to bottom, #0d5cd3 0% 0%, #ffffff 60%);
+    padding: 60px;/* some padding */
     margin-left: auto;
     margin-right: auto;
+    text-align: center; /* center the text */
+    color: black;/* white text color */
+    text-shadow: 1px 1px #66ffff ;
 }
 
 .about {
@@ -24,7 +26,7 @@ body {
     margin-right: auto;
     text-align: center;
     font-size: 40px;
-   
+    background: linear-gradient(to top, #0d5cd3 0%, #ffffff 70%);
 }
 
 .AboutInfo {
@@ -32,52 +34,55 @@ body {
     margin-right: auto;
     text-align: center;
     font-size: 20px;
-    padding:4%;
+    padding: 4%;
 }
 
 
 
 html {
     box-sizing: border-box;
-  }
-  
-  *, *:before, *:after {
+}
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
-  }
-  
-  .column {
+}
+
+.column {
     float: left;
     width: 33.3%;
     margin-bottom: 16px;
     padding: 0 8px;
-  }
-  
-  @media screen and (max-width: 650px) {
+}
+
+@media screen and (max-width: 650px) {
     .column {
-      width: 100%;
-      display: block;
+        width: 100%;
+        display: block;
     }
-  }
-  
-  .card {
+}
+
+.card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  .container {
+}
+
+.container {
     padding: 0 16px;
-  }
-  
-  .container::after, .row::after {
+}
+
+.container::after,
+.row::after {
     content: "";
     clear: both;
     display: table;
-  }
-  
-  .title {
+}
+
+.title {
     color: grey;
-  }
-  
-  .button {
+}
+
+.button {
     border: none;
     outline: 0;
     display: inline-block;
@@ -87,8 +92,8 @@ html {
     text-align: center;
     cursor: pointer;
     width: 100%;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     background-color: #555;
-  }
+}
