--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,7 +7,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-size: 50px;
+    font-size: 60px;
 
 }
 
@@ -116,7 +116,7 @@ html {
     background-color: #555;
 }
 #about {
-    padding:10px;
+    padding:2%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -135,18 +135,25 @@ html {
     
 }
 
+.space{
+    padding:4%;
+}
+
 #Contact{
-    padding:10px;
+    padding:2%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-size: 50px;
+    border-style: solid;
+    width: 50%;
 }
 .contactinfo{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
+    padding: 10px
     
 }
 
@@ -154,4 +161,5 @@ footer{
     padding: 4%;
     font-size: 40px;
     background: linear-gradient(to top, #0d5cd3 0%, #ffffff 70%);
+    text-align: center;
 }
